--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+all-MiniLM-L6-v2/ filter=lfs diff=lfs merge=lfs -text
