--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 all-MiniLM-L6-v2/ filter=lfs diff=lfs merge=lfs -text
+all-MiniLM-L6-v2/* filter=lfs diff=lfs merge=lfs -text
